# weird-wizard-wizard

./: .gitignore  .prettierignore  components.json  eager_load_notes.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0400bbbcfe0d6e83d27d9026d9feedf7a42f134651413be8edd68cc991494e3f.json  query-06dad42c9191167d13674b7e650a87af5e6f2712498c7124d8859e908c2eb341.json  query-0a549c98fd1fc615f149cabab7328b860cd277b343bde8c4f0edcb90c3988a31.json  query-10c0608b3840a3707f1e6f952c68afbb43d0eabd791055453ae0dbbed828a9b1.json  query-32ff43c69a4e9c7e4c1ebe45c9d83b9c57a12c323ccab45904076d109fc7b849.json  query-34f005162c4b8f8a9cd23eff5787a1bc74ebd5897ca0bc3312f854b71a1ca7c2.json  query-3e9d05f6cc5f553d2586c40d06e351b6efb85d541a3c0bc0d502e63579d18fda.json  query-4892231b6b0f078af495c69d6eb04c16be969bbea610d4a9b840a6cbade270a9.json  query-5bc8984b0b93372896a5a8dc1937ca17f3ebf9bfb46e48c5f03568122719615d.json  query-5e0179c56b573b7bbf818b9b57f4e2a4e9461e4d9eff7c861b64a4387dc686a2.json  query-6e0da7d7af5b81c1f9a529bbc68874e4026888c4de0f3c770a91b92f9872b052.json  query-6f4fb47dca7eb1b65f7fcfa0bd2024ea73b7f1b737a93fb14e587763c0ad32fe.json  query-89543cb26677767658eb78009fead869f7495938ae8a0a56ccba4c585ef3967e.json  query-afd791fdd9593aa7da0fedb1254602e2e9fecfa6a6421bfbeae17f0f702552d4.json  query-ba3fecfbb682a8a760534910ddfa878510ed82546b9aca57889f3ebec9711556.json  query-be49873bf4794454aaed1a2017cac7013337d0db9cdde3c05d48ef66c2c537e1.json  (+2 more)
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  result.rs  (+1 more)
(+116 files in other folders)
